--- a/java-server/phonebook-server/src/main/resources/application.properties
+++ b/java-server/phonebook-server/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 
-token.signing.key=akhdjfAAsd143fqwte
+token.signing.key=zYo4hczc84gQuhphfY9Hs5IaY48oITnxbOUSh0Eh0jc=
