--- a/java-server/phonebook-server/src/test/resources/application.properties
+++ b/java-server/phonebook-server/src/test/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+token.signing.key=zYo4hczc84gQuhphfY9Hs5IaY48oITnxbOUSh0Eh0jc=
