--- a/java-server/phonebook-server/src/main/resources/application.properties
+++ b/java-server/phonebook-server/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=phonebook-demo
-spring.datasource.url=jdbc:h2:mem:phonebook
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/phonebook_db?useSSL=false&allowPublicKeyRetrieval=true&&serverTimezone=UTC
+spring.datasource.username=phonebookappuser
+spring.datasource.password=phonebookapppassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 token.signing.key=zYo4hczc84gQuhphfY9Hs5IaY48oITnxbOUSh0Eh0jc=
+# General logging level for the entire application
+logging.level.root=INFO
+
+# Debugging Spring Security
+logging.level.org.springframework.security=DEBUG
