--- a/java-server/phonebook-server/src/test/resources/application.properties
+++ b/java-server/phonebook-server/src/test/resources/application.properties
@@ -6,4 +6,9 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/phonebook_db?useSSL=false&allowPublicKeyRetrieval=true&&serverTimezone=UTC
+#spring.datasource.username=phonebookappuser
+#spring.datasource.password=phonebookapppassword
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 token.signing.key=zYo4hczc84gQuhphfY9Hs5IaY48oITnxbOUSh0Eh0jc=
