--- a/client/phonebook-app/package.json
+++ b/client/phonebook-app/package.json
@@ -16,8 +16,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "env-cmd -f .env.local react-scripts start",
+    "start:local": "env-cmd -f .env.local react-scripts start",
+    "start:aws": "env-cmd -f .env.aws react-scripts start",
+    "build": "env-cmd -f .env.local react-scripts build",
+    "build:local": "env-cmd -f .env.local react-scripts build",
+    "build:aws": "env-cmd -f .env.aws react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -38,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
   }
 }
