--- a/java-server/phonebook-server/pom.xml
+++ b/java-server/phonebook-server/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>org.techchallenge</groupId>
     <artifactId>phonebook-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>phonebook-demo</name>
     <description>phonebook-demo</description>
     <properties>
